Reverted LoginController loginSuccessful method, added setting Main.controller functionality to initialize method in PanelController Fixed potential null pointer in DiscordCommunication.checkToken Added spinner functionality OBSTHObject now retrieves current Y pos instead of forcing user to enter one Added OBSTHObject.refresh()